tester/testsuite/extensions/arrays2/bad/bad002.jl
/* invalid depth when indexing */

void main() {
	int[][] array = new int[10][10];
	printInt(array[0][0][0]);
}
